--- a/setInterval/setInterval.html
+++ b/setInterval/setInterval.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1></h1>
-</body>
+    <h2></h2>
+  </body>
 </html>
 
 <script>
-let i = 0;
-let id = setInterval(function(){
+  let i = 0;
+  let id = setInterval(function () {
+    document.querySelector("h1").innerText = i;
+    i++;
 
-document.querySelector("h1").innerText = i;
-i++;
-
-if(i === 10){
-    clearInterval(id);
-}
-
-},1000)
+    if (i === 10) {
+      clearInterval(id);
+    }
+  }, 1000);
 
 
+   setTimeout(()=>{
+    document.querySelector("h2").innerHTML = " <p> I am a P tag </p>"
+   },3000)
 </script>
